# stupid-calculator

./: .gitignore  README.md  main.stu
compiler/: .gitignore  Makefile  driver.cc  driver.hh  lexer.ll  main.cc  parser.yy
emulator/: CMakeLists.txt
emulator/src/: .gitignore  index.html  main.cpp  prefix.js  sketch.js
emulator/src/assembler/: CMakeLists.txt  assembler.cpp  assembler.h
emulator/src/compiler/: CMakeLists.txt  classnode.cpp  classnode.h  declarationnode.cpp  declarationnode.h  donode.cpp  donode.h  expression.cpp  expression.h  ifnode.cpp  ifnode.h  letnode.cpp  letnode.h  node.cpp  node.h  parser.cpp  parser.h  returnnode.cpp  returnnode.h  subroutinecall.cpp  subroutinecall.h  subroutinenode.cpp  subroutinenode.h  term.cpp  term.h  tokenizer.cpp  tokenizer.h  vmcommand.cpp  vmcommand.h  whilenode.cpp  whilenode.h
emulator/src/translator/: CMakeLists.txt  translator.cpp  translator.h
simulator/: lib.js  package-lock.json  package.json  test.py
